force-app/main/default/objects/Case/fields/Expiry_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date_2__c</fullName>
    <formula>Batch_Number_2__r.Expiry_Date__c</formula>
    <label>Expiry Date 2</label>
    <type>Date</type>
</CustomField>