force-app/main/default/objects/Case/fields/ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>ExpiryDate__c</fullName>
    <description>Products related information is captured</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>