force-app/main/default/objects/Case/fields/External_Call_Execution__c.field-meta.xml
<CustomField>
    <fullName>External_Call_Execution__c</fullName>
    <formula>Campaign__r.External_Call_Execution__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Call Execution</label>
    <type>Checkbox</type>
</CustomField>