force-app/main/default/objects/Case/fields/ExternalCallCenter__c.field-meta.xml
<CustomField>
    <fullName>ExternalCallCenter__c</fullName>
    <description>[11-Jul-21 KSK] Used in TW market data migration; Dynamics CRM</description>
    <label>External Call Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>