force-app/main/default/objects/Case/fields/ExtractedFlag__c.field-meta.xml
<CustomField>
    <fullName>ExtractedFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ExtractedFlag</label>
    <type>Checkbox</type>
</CustomField>