force-app/main/default/objects/Case/fields/FiletoTrackwise__c.field-meta.xml
<CustomField>
    <fullName>FiletoTrackwise__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Able to capture whether the feedback case information has
been captured in Trackwise or no</description>
    <label>File to Trackwise</label>
    <type>Checkbox</type>
</CustomField>