force-app/main/default/objects/Case/fields/FirstCallAttemptDate__c.field-meta.xml
<CustomField>
    <fullName>FirstCallAttemptDate__c</fullName>
    <label>First Call Attempt Date</label>
    <type>DateTime</type>
</CustomField>