force-app/main/default/objects/Case/fields/FollowUpCallRequired__c.field-meta.xml
<CustomField>
    <fullName>FollowUpCallRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow-Up Call Required</label>
    <type>Checkbox</type>
</CustomField>