force-app/main/default/objects/Case/fields/GrowthGuideAppSubmitted__c.field-meta.xml
<CustomField>
    <fullName>GrowthGuideAppSubmitted__c</fullName>
    <formula>RelatedChannelResponse__r.GrowthGuideAppSubmitted__c</formula>
    <label>Growth Guide App Submitted</label>
    <type>Checkbox</type>
</CustomField>