force-app/main/default/objects/Case/fields/HCP_Name__c.field-meta.xml
<CustomField>
    <fullName>HCP_Name__c</fullName>
    <label>HCP Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>