force-app/main/default/objects/Case/fields/Highest_Priority__c.field-meta.xml
<CustomField>
    <fullName>Highest_Priority__c</fullName>
    <formula>Campaign__r.Highest_Priority__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Highest Priority</label>
    <type>Checkbox</type>
</CustomField>