force-app/main/default/objects/Case/fields/Hospital_Polyclinic_Clinic_Name__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Polyclinic_Clinic_Name__c</fullName>
    <label>Hospital/Polyclinic/Clinic Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>