force-app/main/default/objects/Case/fields/Howmanyproductsdidyoureceive__c.field-meta.xml
<CustomField>
    <fullName>Howmanyproductsdidyoureceive__c</fullName>
    <label>How many products did you receive?</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>