force-app/main/default/objects/Case/fields/InvalidReason__c.field-meta.xml
<CustomField>
    <fullName>InvalidReason__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invalid Reason</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Affiliate_Value__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Invalid Reason</value>
        </filterItems>
        <filterItems>
            <field>Affiliate_Value__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Affiliate_Value__c</referenceTo>
    <relationshipLabel>Cases (Invalid Reason)</relationshipLabel>
    <relationshipName>InvalidReason</relationshipName>
    <type>Lookup</type>
</CustomField>