force-app/main/default/objects/Case/fields/Is_Survey_Link_Populated__c.field-meta.xml
<CustomField>
    <fullName>Is_Survey_Link_Populated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Filter Criteria for Adult Survey iframe. Populated from Trigger.</description>
    <label>Is Survey Link Populated</label>
    <type>Checkbox</type>
</CustomField>