force-app/main/default/objects/Case/fields/IsSocialCase__c.field-meta.xml
<CustomField>
    <fullName>IsSocialCase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Social Case</label>
    <type>Checkbox</type>
</CustomField>