force-app/main/default/objects/Case/fields/KeyMessageDriverforTrial__c.field-meta.xml
<CustomField>
    <fullName>KeyMessageDriverforTrial__c</fullName>
    <label>Key Message Driver for Trial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ensure - Complete and Balanced Supplement</fullName>
            </value>
            <value>
                <fullName>Ensure - Supports Muscle Tissue Building and Growth</fullName>
            </value>
            <value>
                <fullName>Ensure - Great-tasting almond flavoured drink</fullName>
            </value>
            <value>
                <fullName>Ensure - Can be used as a  Meal Replacement</fullName>
            </value>
            <value>
                <fullName>Ensure - With Plant Based Protein</fullName>
            </value>
            <value>
                <fullName>Ensure - For Everyday Strength</fullName>
            </value>
            <value>
                <fullName>Ensure - With HMB</fullName>
            </value>
            <value>
                <fullName>Ensure - Less Sugar</fullName>
            </value>
            <value>
                <fullName>Ensure - Scientically formulated</fullName>
            </value>
            <value>
                <fullName>Ensure - No1 Nutritional Supplement Drink in the World</fullName>
            </value>
            <value>
                <fullName>Ensure - High Quality protein</fullName>
            </value>
            <value>
                <fullName>Ensure - Improve bone strength / for strong bones</fullName>
            </value>
            <value>
                <fullName>Ensure - Lactose free</fullName>
            </value>
            <value>
                <fullName>Ensure - Dairy alternative</fullName>
            </value>
            <value>
                <fullName>Glucerna - Support Diabetes Management</fullName>
            </value>
            <value>
                <fullName>Glucerna - Low GI</fullName>
            </value>
            <value>
                <fullName>Glucerna - Complete and Balanced Supplement</fullName>
            </value>
            <value>
                <fullName>Glucerna - Can be used as a Meal Replacement</fullName>
            </value>
            <value>
                <fullName>Glucerna - Can be used as a Snack</fullName>
            </value>
            <value>
                <fullName>Glucerna - For Dietary and Weight Management</fullName>
            </value>
            <value>
                <fullName>Glucerna - Replace Breakfast</fullName>
            </value>
            <value>
                <fullName>Glucerna - No Sucrose</fullName>
            </value>
            <value>
                <fullName>Glucerna - Scientically formulated for People with Diabetes</fullName>
            </value>
            <value>
                <fullName>Glucerna - Improve bone strength / for strong bones</fullName>
            </value>
            <value>
                <fullName>Glucerna - Lactose free</fullName>
            </value>
            <value>
                <fullName>Others (Please specify)</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>