force-app/main/default/objects/Case/fields/LastReminderSentDate__c.field-meta.xml
<CustomField>
    <fullName>LastReminderSentDate__c</fullName>
    <description>Technical Field. Do not display in layout</description>
    <inlineHelpText>Technical Field. Do not display in layout</inlineHelpText>
    <label>Last Reminder Sent Date</label>
    <type>Date</type>
</CustomField>