force-app/main/default/objects/Case/fields/LastReminderSentDateCount__c.field-meta.xml
<CustomField>
    <fullName>LastReminderSentDateCount__c</fullName>
    <formula>TODAY() - LastReminderSentDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Reminder Sent Date Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>