force-app/main/default/objects/Case/fields/LotNumber__c.field-meta.xml
<CustomField>
    <fullName>LotNumber__c</fullName>
    <description>Products related information is captured</description>
    <label>Lot Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>