force-app/main/default/objects/Case/fields/LoyaltyCardNumber__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyCardNumber__c</fullName>
    <description>Capture the loyalty card number for a customer</description>
    <label>Loyalty Card Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>