force-app/main/default/objects/Case/fields/Manage_Resource__c.field-meta.xml
<CustomField>
    <fullName>Manage_Resource__c</fullName>
    <label>Manage Resource</label>
    <type>TextArea</type>
</CustomField>