force-app/main/default/objects/Case/fields/Manufacturing_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Date_1__c</fullName>
    <formula>Batch_Number_1__r.Manufacturing_Date__c</formula>
    <label>Manufacturing Date 1</label>
    <type>Date</type>
</CustomField>