force-app/main/default/objects/Case/fields/Manufacturing_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Date_2__c</fullName>
    <formula>Batch_Number_2__r.Manufacturing_Date__c</formula>
    <label>Manufacturing Date 2</label>
    <type>Date</type>
</CustomField>