force-app/main/default/objects/Case/fields/ManufacturingDate__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingDate__c</fullName>
    <description>Products related information is captured</description>
    <label>Manufacturing Date</label>
    <type>Date</type>
</CustomField>