force-app/main/default/objects/Case/fields/Material_Description_1__c.field-meta.xml
<CustomField>
    <fullName>Material_Description_1__c</fullName>
    <formula>Batch_Number_1__r.Material_Description__c</formula>
    <label>Material Description 1</label>
    <type>Text</type>
</CustomField>