force-app/main/default/objects/Case/fields/Material_Description_2__c.field-meta.xml
<CustomField>
    <fullName>Material_Description_2__c</fullName>
    <formula>Batch_Number_2__r.Material_Description__c</formula>
    <label>Material Description 2</label>
    <type>Text</type>
</CustomField>