force-app/main/default/objects/Case/fields/Material_Description__c.field-meta.xml
<CustomField>
    <fullName>Material_Description__c</fullName>
    <label>Material Description</label>
    <type>TextArea</type>
</CustomField>