force-app/main/default/objects/Case/fields/MedicalDiagnosis__c.field-meta.xml
<CustomField>
    <fullName>MedicalDiagnosis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nutrition History</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.CallRegarding__c</field>
            <operation>equals</operation>
            <valueField>Medical_Diagnosis__c.Contact__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Medical_Diagnosis__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>