force-app/main/default/objects/Case/fields/NextAttemptDueDate__c.field-meta.xml
<CustomField>
    <fullName>NextAttemptDueDate__c</fullName>
    <label>Next Attempt Due Date</label>
    <type>Date</type>
</CustomField>