force-app/main/default/objects/Case/fields/NumberofConversion__c.field-meta.xml
<CustomField>
    <fullName>NumberofConversion__c</fullName>
    <label>Number of Conversion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>