force-app/main/default/objects/Case/fields/NumberofCrossSell__c.field-meta.xml
<CustomField>
    <fullName>NumberofCrossSell__c</fullName>
    <label>Number of Cross-Sell</label>
    <length>255</length>
    <type>Text</type>
</CustomField>