force-app/main/default/objects/Case/fields/NumberofRetention__c.field-meta.xml
<CustomField>
    <fullName>NumberofRetention__c</fullName>
    <label>Number of Retention</label>
    <length>255</length>
    <type>Text</type>
</CustomField>