force-app/main/default/objects/Case/fields/NumberofTrial__c.field-meta.xml
<CustomField>
    <fullName>NumberofTrial__c</fullName>
    <label>Number of Trial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>