force-app/main/default/objects/Case/fields/NumberofUpSell__c.field-meta.xml
<CustomField>
    <fullName>NumberofUpSell__c</fullName>
    <label>Number of Up-Sell</label>
    <length>255</length>
    <type>Text</type>
</CustomField>