force-app/main/default/objects/Case/fields/NumberofWinBack__c.field-meta.xml
<CustomField>
    <fullName>NumberofWinBack__c</fullName>
    <label>Number of Win Back</label>
    <length>255</length>
    <type>Text</type>
</CustomField>