force-app/main/default/objects/Case/fields/of_Case_Call__c.field-meta.xml
<CustomField>
    <fullName>of_Case_Call__c</fullName>
    <formula>IF(  RecordType.Name = &quot;Call&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Case Call</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>