force-app/main/default/objects/Case/fields/of_Completed_Case__c.field-meta.xml
<CustomField>
    <fullName>of_Completed_Case__c</fullName>
    <formula>IF( 
(
AND(
ISPICKVAL(Status, &quot;Completed&quot;),
RecordType.Name = &quot;Call&quot;,
NOT(ISNULL(Order__c))
)
), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Completed Case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>