force-app/main/default/objects/Case/fields/Other_Request__c.field-meta.xml
<CustomField>
    <fullName>Other_Request__c</fullName>
    <label>Other Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ensure Gold Loyalty Rewards card</fullName>
            </value>
            <value>
                <fullName>Glucerna Loyalty Rewards card</fullName>
            </value>
            <value>
                <fullName>Similac GainSchool Loyalty Rewards card</fullName>
            </value>
            <value>
                <fullName>Pediasure Plus Loyalty Rewards card</fullName>
            </value>
            <value>
                <fullName>Ensure Free Sample</fullName>
            </value>
            <value>
                <fullName>Glucerna Free Sample</fullName>
            </value>
            <value>
                <fullName>Pediasure Free Sample</fullName>
            </value>
            <value>
                <fullName>Similac Free Sample</fullName>
            </value>
            <value>
                <fullName>Height Chart</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>