force-app/main/default/objects/Case/fields/Outsource_agent_id__c.field-meta.xml
<CustomField>
    <fullName>Outsource_agent_id__c</fullName>
    <label>Outsource_agent_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>