force-app/main/default/objects/Case/fields/outsource_agent_name__c.field-meta.xml
<CustomField>
    <fullName>outsource_agent_name__c</fullName>
    <label>outsource_agent_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>