force-app/main/default/objects/Case/fields/OutsourceCampaign__c.field-meta.xml
<CustomField>
    <fullName>OutsourceCampaign__c</fullName>
    <label>Outsource Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>