force-app/main/default/objects/Case/fields/OutsourceVendor__c.field-meta.xml
<CustomField>
    <fullName>OutsourceVendor__c</fullName>
    <label>Outsource Vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>