force-app/main/default/objects/Case/fields/PackCondition__c.field-meta.xml
<CustomField>
    <fullName>PackCondition__c</fullName>
    <label>Pack Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>