force-app/main/default/objects/Case/fields/Preferred_Lanugage__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Lanugage__c</fullName>
    <formula>Contact.PreferredLanguage__r.Name</formula>
    <label>Preferred Lanugage</label>
    <type>Text</type>
</CustomField>