force-app/main/default/objects/Case/fields/PreferredDateTimeofCallback__c.field-meta.xml
<CustomField>
    <fullName>PreferredDateTimeofCallback__c</fullName>
    <description>This should be captured under Case Comments by customer
service agent and set status to &quot;Follow-Up Call Required&quot;
Activity task to schedule a call task can be created by
customer service agent if he or she wants to set a due date for
the call.</description>
    <label>Preferred Date &amp; Time of Call back</label>
    <type>DateTime</type>
</CustomField>