force-app/main/default/objects/Case/fields/PrenatalCall__c.field-meta.xml
<CustomField>
    <fullName>PrenatalCall__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[30-Aug-21 Khai] To accommodate Migration Data formats</description>
    <label>Prenatal Call</label>
    <type>Checkbox</type>
</CustomField>