force-app/main/default/objects/Case/fields/Previous_No_Of_Scoop__c.field-meta.xml
<CustomField>
    <fullName>Previous_No_Of_Scoop__c</fullName>
    <description>Get field value no of scoop from previous call</description>
    <label>Previous No Of Scoop</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>