force-app/main/default/objects/Case/fields/ProductCampaign__c.field-meta.xml
<CustomField>
    <fullName>ProductCampaign__c</fullName>
    <formula>Campaign__r.Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand</label>
    <type>Text</type>
</CustomField>