force-app/main/default/objects/Case/fields/ProductPackageSize__c.field-meta.xml
<CustomField>
    <fullName>ProductPackageSize__c</fullName>
    <description>Capture the package size of the product</description>
    <label>Product Package Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>