force-app/main/default/objects/Case/fields/ProductReplacementDeliveredDate__c.field-meta.xml
<CustomField>
    <fullName>ProductReplacementDeliveredDate__c</fullName>
    <label>Product Replacement Delivered Date</label>
    <type>Date</type>
</CustomField>